# packmol

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.tmp  Makefile.trl  README.md  fpm.toml  getinp.f90  initial.f90  input.f90  packmol.f90  pyproject.toml  release.sh  update_version.sh
.github/workflows/: actions.yml  build-wheels.yaml
app/: packmol.f90
docs/: applications.shtml  citation.shtml  download.shtml  email.shtml  estilo.css  examples.shtml  external.shtml  features.shtml  head.shtml  head_note.shtml  home_nohighlight.shtml  index.html  input_options.shtml  logo.ora  mdff.shtml  nmols.shtml  nmols2.shtml  packmol  picks.shtml  read-MOLDY.shtml  regularmail.shtml  tail.shtml  tail_note.shtml  tolerance-note.shtml  update.sh  userguide.shtml  utilities.shtml
docs/examples/: bilayer-comment.inp  packmol
docs/userguide/: index.html
python/: hatch_build.py
python/packmol/: __init__.py  cli.py
python/tests/: test_packmol.py
src/: ahestetic.mod  cell_indexing.f90  cell_indices.f90  checkpoint.f90  cli_parser.f90  comprest.f90  compute_data.f90  computef.f90  computeg.f90  exit_codes.f90  fparc.f90  gencan.f  getinp.f90  gparc.f90  gwalls.f90  heuristics.f90  initial.f90  input.f90  output.f90  pbc.f90  pgencan.f90  polartocart.f90  random.f90  resetboxes.f90  resetcells.f90  restmol.f90  setibox.f90  seticell.f90  setijk.f90  setsizes.f90  sizes.f90  title.f90  writesuccess.f90
testing/: Project.toml  check_numerics_profiles.sh  runtests.jl  test.sh  test_cli.sh  test_connectivity.sh  test_failed.sh
testing/input_files/: mixture_pbc.inp  solvprotein.inp  solvprotein_pbc.inp  water_box.inp  water_box_pbc.inp  water_box_pbc_negative_coordinates.inp  water_box_pbc_outside_box.inp  water_box_pbc_slab.inp
